--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,18 +9,30 @@ name: CI
 jobs:
   format:
     name: Check formatting of Rust code with rustfmt
+    runs-on: ubuntu-latest
+    steps:
     # You may pin to the exact commit or the version.
     # uses: actions-rust-lang/rustfmt@559aa3035a47390ba96088dffa783b5d26da9326
-    uses: actions-rust-lang/rustfmt@v1.1.1
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Run rustfmt
+        uses: actions-rust-lang/rustfmt@v1.1.1
           
   flatpak:
     name: Flatpak Builder
+    runs-on: ubuntu-latest
     # You may pin to the exact commit or the version.
     # uses: flatpak/flatpak-github-actions@fcc75a490e0a97ff4785b706adfc4fc10e732f4e
-    uses: flatpak/flatpak-github-actions@v2
-    with:
-      # The relative path of the manifest file.
-      manifest-path: build-aux/nl.emphisia.icon.json
-      # The bundle name, by default it's app.flatpak
-      bundle: nl.emphisia.nl
-            
+    steps:
+    # You may pin to the exact commit or the version.
+    # uses: actions-rust-lang/rustfmt@559aa3035a47390ba96088dffa783b5d26da9326
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: build flatpak
+        uses: flatpak/flatpak-github-actions@v2
+        with:
+          # The relative path of the manifest file.
+          manifest-path: build-aux/nl.emphisia.icon.json
+          # The bundle name, by default it's app.flatpak
+          bundle: nl.emphisia.nl
+                
