--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,17 +7,16 @@ on:
 name: CI
 
 jobs:
-  formatting:
-    name: cargo fmt
+  format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # Ensure rustfmt is installed and setup problem matcher
-      - uses: actions-rust-lang/setup-rust-toolchain@v1.12.0
+      - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt
-      - name: Rustfmt Check
-        uses: actions-rust-lang/rustfmt@v1.1.1
+      - uses: mbrobbel/rustfmt-check@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
   flatpak:
     name: "Flatpak"
