--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,16 +7,17 @@ on:
 name: CI
 
 jobs:
-  format:
+  formatting:
+    name: cargo fmt
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+      # Ensure rustfmt is installed and setup problem matcher
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt
-      - uses: mbrobbel/rustfmt-check@master
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Rustfmt Check
+        uses: actions-rust-lang/rustfmt@v1
 
   flatpak:
     name: "Flatpak"
