borrowing code from other project

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,28 +7,30 @@ on:
 name: CI
 
 jobs:
-  formatting:
-    name: cargo fmt
+  rustfmt:
+    name: Rustfmt
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # Ensure rustfmt is installed and setup problem matcher
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - uses: dtolnay/rust-toolchain@v1
         with:
+          toolchain: stable
           components: rustfmt
-      - name: Rustfmt Check
-        uses: actions-rust-lang/rustfmt@v1
+      - name: Create blank versions of configured file
+        run: echo -e "" >> src/config.rs
+      - name: Run cargo fmt
+        run: cargo fmt --all -- --check
 
   flatpak:
     name: "Flatpak"
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-nightly
       options: --privileged
     steps:
       - uses: actions/checkout@v4
-      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6.5
         with:
-          bundle: iconic.flatpak
-          manifest-path: build-aux/nl.emphisia.icon.json
+          bundle: Iconic.flatpak
+          manifest-path: build-aux/nl.emphisia.icon.Devel.json
           cache-key: flatpak-builder-${{ github.sha }}
