--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,24 @@ edition = "2024"
 [profile.release.package."*"]
 opt-level = 3
 
+[profile.release]
+opt-level = "z"   # Optimize for size.
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
+
 [dependencies]
 gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
-image = "0.25.2"
-gio = "0.20.9"
+image = "0.25.6"
+gio = "0.20.11"
 librsvg = "2.60.0"
-cairo-rs = "0.20.7"
-resvg = "0.45.0"
-usvg = "0.45.0"
+cairo-rs = "0.20.10"
+resvg = "0.45.1"
+usvg = "0.45.1"
 log = "0.4.22"
 pretty_env_logger = "0.5"
-rand = "0.9.0"
+rand = "0.9.1"
 fs_extra = "1.2.0"
 hex = "0.4.3"
 thiserror = "2.0.12"
