--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,26 +16,28 @@ strip = "symbols"
 
 [dependencies]
 gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
-image = "0.25.6"
-gio = "0.20.12"
-librsvg = "2.60.0"
-cairo-rs = "0.20.12"
+image = "0.25.8"
+gio = "0.21.2"
+librsvg = "2.61.1"
+cairo-rs = "0.21.2"
 resvg = "0.45.1"
 usvg = "0.45.1"
-log = "0.4.22"
+log = "0.4.28"
 pretty_env_logger = "0.5"
-rand = "0.9.1"
+rand = "0.9.2"
 fs_extra = "1.2.0"
 hex = "0.4.3"
-thiserror = "2.0.12"
+thiserror = "2.0.16"
+gdk4 = "0.10.1"
+gsk4 = "0.10.1"
 
 
 [dependencies.gtk]
 package = "gtk4"
-version = "0.9.7"
+version = "0.10.1"
 features = ["v4_18"]
 
 [dependencies.adw]
 package = "libadwaita"
-version = "0.7.2"
-features = ["v1_7"]
+version = "0.8.0"
+features = ["v1_8"]
