--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ hex = "0.4.3"
 thiserror = "2.0.16"
 gdk4 = "0.10.1"
 gsk4 = "0.10.1"
-rexiv2 = "0.10.0"
+xmp_toolkit = "1.11.0"
+serde_json = "1.0.145"
+serde = { version = "1.0.226", features = ["serde_derive"] }
 
 
 [dependencies.gtk]
