--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "folder_icon"
-version = "2025.3.2"
+version = "2025.9.1"
 edition = "2024"
 
 # override package level optimization, to always be maximum
@@ -33,6 +33,7 @@ gsk4 = "0.10.1"
 xmp_toolkit = "1.11.0"
 serde_json = "1.0.145"
 serde = { version = "1.0.226", features = ["serde_derive"] }
+random_str = "0.1.2"
 
 
 [dependencies.gtk]
