--- a/data/nl.emphisia.icon.gschema.xml.in
+++ b/data/nl.emphisia.icon.gschema.xml.in
@@ -77,5 +77,9 @@
       <default>false</default>
       <summary>Allow dropping dragged iconic images back into iconic</summary>
     </key>
+    <key name="strict-regeneration" type="b">
+      <default>true</default>
+      <summary>Only allow regeneration of folder with "follow accent color" enabled</summary>
+    </key>
 	</schema>
 </schemalist>
