--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "folder_icon"
+name = "Iconic"
 version = "2025.9.1"
 edition = "2024"
 
@@ -27,12 +27,12 @@ pretty_env_logger = "0.5"
 rand = "0.9.2"
 fs_extra = "1.2.0"
 hex = "0.4.3"
-thiserror = "2.0.16"
+thiserror = "2.0.17"
 gdk4 = "0.10.1"
 gsk4 = "0.10.1"
 xmp_toolkit = "1.11.0"
 serde_json = "1.0.145"
-serde = { version = "1.0.227", features = ["serde_derive"] }
+serde = { version = "1.0.228", features = ["serde_derive"] }
 random_str = "0.1.2"
 
 
