--- a/data/meson.build
+++ b/data/meson.build
@@ -1,4 +1,3 @@
-
 subdir('icons')
 # Desktop File
 desktop_conf = configuration_data()
@@ -8,12 +7,12 @@ desktop_file = i18n.merge_file(
   input: configure_file(
     input: '@0@.desktop.in.in'.format(base_id),
     output: '@BASENAME@',
-    configuration: desktop_conf
+    configuration: desktop_conf,
   ),
   output: '@0@.desktop'.format(base_id),
   po_dir: podir,
   install: true,
-  install_dir: datadir / 'applications'
+  install_dir: datadir / 'applications',
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
@@ -29,15 +28,13 @@ appdata_file = i18n.merge_file(
   input: configure_file(
     input: '@0@.metainfo.xml.in.in'.format(base_id),
     output: '@BASENAME@',
-    configuration: appdata_conf
+    configuration: appdata_conf,
   ),
   output: '@0@.metainfo.xml'.format(base_id),
   po_dir: podir,
   install: true,
-  install_dir: datadir / 'metainfo'
+  install_dir: datadir / 'metainfo',
 )
-
-
 
 # GSchema
 gschema_conf = configuration_data()
@@ -47,22 +44,25 @@ configure_file(
   output: '@0@.gschema.xml'.format(application_id),
   configuration: gschema_conf,
   install: true,
-  install_dir: datadir / 'glib-2.0' / 'schemas'
+  install_dir: datadir / 'glib-2.0' / 'schemas',
 )
 
-
-
 appstreamcli = find_program('appstreamcli', required: false, disabler: true)
-test('Validate appstream file', appstreamcli,
-     args: ['validate', '--no-net', '--explain', appdata_file])
+test(
+  'Validate appstream file',
+  appstreamcli,
+  args: ['validate', '--no-net', '--explain', appdata_file],
+)
 
 # install_data('nl.emphisia.icon.gschema.xml',
 #   install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
 # )
 
 compile_schemas = find_program('glib-compile-schemas', required: false, disabler: true)
-test('Validate schema file',
-     compile_schemas,
-     args: ['--strict', '--dry-run', meson.current_source_dir()])
+test(
+  'Validate schema file',
+  compile_schemas,
+  args: ['--strict', '--dry-run', meson.current_source_dir()],
+)
 
-install_subdir('folders', install_dir: get_option('datadir')/'folder_icon')
+install_subdir('folders', install_dir: get_option('datadir') / 'Iconic')
