--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,16 @@
-project('folder_icon', 'rust',
-          version: '2025.9.1',
-    meson_version: '>= 0.62.0',
-  default_options: [ 'warning_level=2', 'werror=false', ],
+project(
+  'Iconic',
+  'rust',
+  version: '2025.9.1',
+  meson_version: '>= 0.62.0',
+  default_options: [
+    'warning_level=2',
+    'werror=false',
+  ],
 )
 
 i18n = import('i18n')
 gnome = import('gnome')
-
 
 base_id = 'nl.emphisia.icon'
 prefix = get_option('prefix')
@@ -36,7 +40,7 @@ subdir('src')
 subdir('po')
 
 gnome.post_install(
-     glib_compile_schemas: true,
-    gtk_update_icon_cache: true,
+  glib_compile_schemas: true,
+  gtk_update_icon_cache: true,
   update_desktop_database: true,
 )
