--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ xmp_toolkit = "1.11.0"
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["serde_derive"] }
 random_str = "0.1.2"
+async-channel = "2.5.0"
 
 
 [dependencies.gtk]
